Backport 1.19.2-7.1.0